Created client form and client list views

--- a/templates/client/new.html.twig
+++ b/templates/client/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Adding new product</h1>
-{{ form(form) }}
+    <h1>Adding new client</h1>
+    {{ form(form) }}
 {% endblock %}
